fix: :hammer: z-index of next and previous btn & add typescript on chat application

--- a/src/assets/css/page.scss
+++ b/src/assets/css/page.scss
@@ -170,7 +170,7 @@
 
     a {
         position: relative;
-        z-index: 2;
+        z-index: 999;
         width: 80px;
         height: 60px;
         &::after{
@@ -252,7 +252,7 @@
 
     a {
         position: relative;
-        z-index: 2;
+        z-index: 999;
         width: 80px;
         height: 60px;
         &::after{
